# eclipse

./: .gitattributes  .gitignore  LICENSE.md  README.md  main.py  tests.py
arduino/cerebral/: cerebral.ino
crossbar/: index.html
crossbar/.crossbar/: config.json  key.priv  key.pub  node.pid  server.cer  server.csr  server.p12  server.pkey  server_cert.pem  server_csr.pem  server_key.pem
deploy/: backup.sh  install.sh  run.sh  test_numba.sh
deploy/supervisor/: edd.conf  pack1.conf  pack2.conf
docs/: README.md
docs/cad/: PackBOT.7z
docs/src/: repair.html  repair.md  tutorial.html  tutorial.md  usage.html  usage.md
docs/src/assets/: com.xml  head.xml  servo.xml  vector.xml  vector1.xml  vector2.xml
docs/src/template/: template.css  template.html
notebook/: Eye of the Tiger.ipynb  Kinematics.ipynb  Untitled.ipynb
notebook/.ipynb_checkpoints/: Eye of the Tiger-checkpoint.ipynb  Kinematics-checkpoint.ipynb  Untitled-checkpoint.ipynb
presentation/: alpha.py  arc.py  dog.py  fabrik.py
redboard/cerebral/: cerebral.ino  mpu.h  mpu.ino  quaternionFilter.h  quaternionFilter.ino  uv.h
redboard/kine/: kine.ino
shared/: __init__.py
shared/agility/: maestro.py
shared/cerebral/: autoreconnect.py  hippocampus.py  main.py
shared/finesse/: dog.py
src/: config.py  eclipse.py  main.py  multi.py  tests.py
src/agility/: BytecodeInstruction.py  BytecodeProgram.py  agility.py  enumeration.py  gait.py  maestro.py  main.py  test.py
src/agility/forth/: in.4th  out.txt
src/agility/imu/: mpu.py
src/agility/pololu/: BytecodeInstruction.py  BytecodeProgram.py  BytecodeReader.py  Usc.py  enumeration.py  instruction.py  program.py  reader.py  settings.py  structure.py  usc.py
src/agility/tests/: analysis.py  com.py  com_test.py  crawl.py  dance.py  full.py  game.py  paragon.py  plot.py  pose.py  single.py  speed.py  stepper.py
src/ares/: main.py
src/ares/tests/: test.py
src/cerebral/: autoreconnect.py  database.py  hippocampus.py  logger.py  manager.py  nameserver.py
src/cerebral/dog1/: commands.py  hippocampus.py  main.py  run.sh  worker1.py
src/finesse/: dog.py  eclipse.py  kinematics.py  main.py  paragon.py
src/lykos/: apollo.py
src/shared/: alsa.py  autoreconnect.py  debug.py  pid.py  queue.py  timer.py
src/tests/: eclipse.py  main.py  multi.py  pseudocode.py  tests.py
src/theia/: cmt.py  eye.py  main.py  matcher.py  test.py  tracker.py  trainer.py  util.py  vision.py  vtest.avi
src/theia/oculus/: CMakeLists.txt  PythonMake.txt  README.md
src/theia/oculus/src/: oculus.cpp
src/theia/oculus/src/cf_libs/common/: scale_estimator.hpp
src/theia/oculus/src/cf_libs/dsst/: dsst_tracker.hpp
src/theia/oculus/src/cf_libs/kcf/: kcf_tracker.hpp
src/theia/oculus/src/cf_libs/line2d/: feature_maps.hpp  line2d.hpp
src/theia/oculus/src/cf_libs/saliency/: saliency.hpp
src/theia/oculus/src/exports/: dsst_export.cpp  dsst_export.h  kcf_export.cpp  kcf_export.h  line2d_export.cpp  line2d_export.h  saliency_export.cpp  saliency_export.h
src/theia/odom/: .gitignore  CMakeLists.txt  Readme.md  WindowsBuildInstruction.md
src/theia/odom/apps/: CMakeLists.txt
src/theia/odom/apps/slam/: CMakeLists.txt  DebugOutput3DWrapper.cpp  DebugOutput3DWrapper.h  main_live_odometry.cc  main_on_images.cc  sample_app.cc
src/theia/odom/camera-calibration/: build.sh
src/theia/odom/cmake/: LsdSlamConfig.cmake.in  LsdSlamDependencies.cmake  LsdSlamDependencies_Config.cmake.in  LsdSlamUtil.cmake  cmake_uninstall.cmake.in
src/theia/odom/cmake/modules/: FindG2O.cmake
src/theia/odom/data/: out_camera_data.xml
src/theia/odom/lsd_slam/: CMakeLists.txt  live_slam_wrapper.cc  live_slam_wrapper.h  slam_system.cc  slam_system.h
src/theia/odom/lsd_slam/depth_estimation/: depth_map.cc  depth_map.h  depth_map_pixel_hypothesis.cc  depth_map_pixel_hypothesis.h
src/theia/odom/lsd_slam/global_mapping/: fab_map.cc  g2o_type_sim3_sophus.cc  g2o_type_sim3_sophus.h  key_frame_graph.cc  key_frame_graph.h  trackable_key_frame_search.cc  trackable_key_frame_search.h
src/theia/odom/lsd_slam/io_wrapper/: ImageDisplay_OpenCV.cc  OpenCVImageStreamThread.cpp  OpenCVImageStreamThread.h  image_display.h  input_image_stream.h  output_3d_wrapper.h  timestamp.cc  timestamped_object.h
src/theia/odom/lsd_slam/model/: frame.cc  frame.h  frame_memory.cc  frame_pose_struct.cc  frame_pose_struct.h
src/theia/odom/lsd_slam/tracking/: least_squares.h  relocalizer.cc  relocalizer.h  se3_tracker.cc  se3_tracker.h  sim3_tracker.cc  sim3_tracker.h  tracking_reference.cc  tracking_reference.h
src/theia/odom/lsd_slam/util/: global_funcs.cc  global_funcs.h  settings.cc  snprintf.h  undistorter.cc
src/theia/odom/scripts/: set_paths.bat.in  set_paths_and_run_vc.bat.in
src/theia/slam/: CMakeLists.txt
src/theia/slam/Examples/Monocular/: mono_kitti.cc  mono_tum.cc
src/theia/slam/ORB_SLAM2-master/: CMakeLists.txt
src/theia/slam/ORB_SLAM2-master/Examples/Monocular/: Eclipse.yaml  KITTI04-12.yaml  mono_kitti.cc  mono_tum.cc
src/theia/slam/ORB_SLAM2-master/src/: LocalMapping.cc  LoopClosing.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  System.cc  Tracking.cc  Viewer.cc
src/theia/slam/include/: Converter.h  Frame.h  FrameDrawer.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h
src/theia/slam/python/: test.py
src/theia/slam/python/include/: gil.hpp
src/theia/slam/python/src/: debug.cpp  pyslam.cpp
src/theia/slam/src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
src/tools/: logging.py  pid.py  timer.py
src/zeus/: voice.html  voice.js  zeus.html  zeus.js
tests/audio/: record.flac
tests/vision/: orb.py  vision.py
zeus/: autoreconnect.py  test.html  test.js  test.py  zeus.html  zeus.js
(+113 files in other folders)
